--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,19 @@
-# Python dependencies for mental health clustering analysis
-# Core data analysis
+## you would need to install these packages
 pandas>=1.5.0
 numpy>=1.21.0
 scikit-learn>=1.1.0
 
-# Visualization
+
 matplotlib>=3.5.0
 seaborn>=0.11.0
 
-# Jupyter notebook
+
 jupyter>=1.0.0
 ipykernel>=6.0.0
 
-# Statistical analysis
+
 scipy>=1.9.0
 statsmodels>=0.13.0
 
-# File handling
+
 pathlib2>=2.3.0
